--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,7 @@
 }
 @font-face {
   font-family: "InterSb";
-  src: local("Inter"),
-    url("./fonts/inter/Inter-SemiBold.ttf") format("truetype");
+  src: local("Inter"), url("./fonts/inter/Inter-SemiBold.ttf") format("truetype");
 }
 @font-face {
   font-family: "InterBo";
@@ -29,11 +28,10 @@
 }
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "InterRg";
+  font-family: "InterRg", sans-serif;
 }
 
 html {
